--- a/src/Components/PropertyInspector/StandalonePropertyInspector.scss
+++ b/src/Components/PropertyInspector/StandalonePropertyInspector.scss
@@ -3,7 +3,10 @@
 .cb-standalone-property-inspector-container {
     background-color: var(--cb-color-bg-canvas);
     color: var(--cb-color-text-primary);
-    min-width: 392px;
+    height: 100%;
+    min-width: 344px;
+    overflow: hidden;
+    width: 100%;
     .cb-standalone-property-inspector-header {
         align-items: center;
         display: flex;
